Updated version of express.

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ block content
                 if typeof(LeftHeader_content) !== 'undefined'
                   != LeftHeader_content
                 else
-                  [edit here]
+                  | [edit here]
 
             ul.services
               li
@@ -21,7 +21,7 @@ block content
                     if typeof(Paragraph1_content) !== 'undefined'
                       != Paragraph1_content
                     else
-                      [edit here]
+                      | [edit here]
               li
                 img(src='/images/planet2.png', alt='Image')
                 span(about='Paragraph2')
@@ -29,7 +29,7 @@ block content
                     if typeof(Paragraph2_content) !== 'undefined'
                       != Paragraph2_content
                     else
-                      [edit here]
+                      | [edit here]
               li
                 img(src='/images/planet3.png', alt='Image')
                 span(about='Paragraph3')
@@ -37,7 +37,7 @@ block content
                     if typeof(Paragraph3_content) !== 'undefined'
                       != Paragraph3_content
                     else
-                      [edit here]
+                      | [edit here]
               li
                 img(src='/images/planet4.png', alt='Image')
                 span(about='Paragraph4')
@@ -45,7 +45,7 @@ block content
                     if typeof(Paragraph4_content) !== 'undefined'
                       != Paragraph4_content
                     else
-                      [edit here]
+                      | [edit here]
         .sidebar
           div
             h2(about='RightHeader')
@@ -53,7 +53,7 @@ block content
                 if typeof(RightHeader_content) !== 'undefined'
                   != RightHeader_content
                 else
-                  [edit here]
+                  | [edit here]
 
             img(src='/images/planet5.png', alt='Image')
             h3(about='Paragraph5')
@@ -61,14 +61,14 @@ block content
                 if typeof(Paragraph5_content) !== 'undefined'
                   != Paragraph5_content
                 else
-                  [edit here]
+                  | [edit here]
           div
             h2(about='BottomHeader')
               div(property='content')
                 if typeof(BottomHeader_content) !== 'undefined'
                   != BottomHeader_content
                 else
-                  [edit here]
+                  | [edit here]
             ul
               li
                 span(about='Paragraph6')
@@ -76,4 +76,4 @@ block content
                     if typeof(Paragraph6_content) !== 'undefined'
                       != Paragraph6_content
                     else
-                      [edit here]
+                      | [edit here]
